feat: fetching data using retrofit nd RxJava

--- a/Rx+Retrofit/app/src/main/res/layout/activity_main.xml
+++ b/Rx+Retrofit/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="me.gurpreetsk.rxretrofit.MainActivity">
+
+    <ProgressBar
+        android:layout_width="match_parent"
+        android:id="@+id/progress_bar"
+        android:layout_height="wrap_content"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview"
