--- a/RxOperators/app/src/main/res/layout/activity_main.xml
+++ b/RxOperators/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="me.gurpreetsk.rxoperators.MainActivity">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="@dimen/margin_16dp"
+        tools:context="me.gurpreetsk.rxoperators.ui.MainActivity">
 
-</LinearLayout>
+        <Button
+            android:id="@+id/button_map_operator"
+            android:layout_width="match_parent"
+            android:text="@string/map_operator"
+            android:layout_height="?actionBarSize"/>
+
+        <Button
+            android:id="@+id/button_flatmap_operator"
+            android:layout_width="match_parent"
+            android:text="@string/flatmap_operator"
+            android:layout_height="?actionBarSize"/>
+
+        <!--<Button-->
+            <!--android:id="@+id/button_map_operator"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="?actionBarSize"/>-->
+
+    </LinearLayout>
+</ScrollView>
