feat: add operator activities to fix app structure

--- a/RxOperators/app/src/main/res/layout/activity_mathematical_operators.xml
+++ b/RxOperators/app/src/main/res/layout/activity_mathematical_operators.xml
@@ -1,16 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.transformation.MapActivity">
+    tools:context="me.gurpreetsk.rxoperators.ui.mathematical.MathematicalOperatorsActivity">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/textview_flatmap"
-        android:gravity="center"/>
-
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
