--- a/RxOperators/app/src/main/res/layout/activity_main.xml
+++ b/RxOperators/app/src/main/res/layout/activity_main.xml
@@ -10,28 +10,46 @@
     android:padding="@dimen/margin_16dp"
     tools:context="me.gurpreetsk.rxoperators.ui.MainActivity">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:text="@string/types_of_operators"
+        android:textColor="@android:color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.4dp"
+        android:layout_margin="@dimen/margin_4dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:background="@android:color/darker_gray"/>
+
     <Button
         android:id="@+id/button_transformation"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
-        android:text="@string/map_operator"/>
+        android:text="@string/transformational_operators"/>
 
     <Button
         android:id="@+id/button_mathematical"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
-        android:text="@string/flatmap_operator"/>
+        android:text="@string/mathematical_operators"/>
 
     <Button
         android:id="@+id/button_filtering"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
-        android:text="@string/map_operator"/>
+        android:text="@string/filtering_operators"/>
 
     <Button
         android:id="@+id/button_combinational"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
-        android:text="@string/flatmap_operator"/>
+        android:text="@string/combinational_operator"/>
 
 </LinearLayout>
