--- a/RxOperators/app/src/main/res/layout/activity_buffer.xml
+++ b/RxOperators/app/src/main/res/layout/activity_buffer.xml
@@ -4,12 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="me.gurpreetsk.rxoperators.ui.transformation.BufferActivity">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/margin_4dp"
+        android:layout_marginTop="@dimen/margin_4dp"
+        android:gravity="center"
+        android:text="@string/see_logs"
+        android:textSize="16sp"
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/textview_buffer"
         android:layout_width="match_parent"
-        android:gravity="center"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:gravity="center"/>
 
 </LinearLayout>
