--- a/RxOperators/app/src/main/res/layout/activity_combine_latest.xml
+++ b/RxOperators/app/src/main/res/layout/activity_combine_latest.xml
@@ -1,10 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="me.gurpreetsk.rxoperators.ui.combination.CombineLatestActivity">
+    tools:context="me.gurpreetsk.rxoperators.ui.combination.ZipActivity">
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/textview_combine_latest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:textSize="14sp"/>
+
+</RelativeLayout>
+
