--- a/RxOperators/app/src/main/res/layout/activity_filtering_operators.xml
+++ b/RxOperators/app/src/main/res/layout/activity_filtering_operators.xml
@@ -1,10 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="me.gurpreetsk.rxoperators.ui.filtering.FilteringOperatorsActivity">
+    android:layout_height="match_parent">
 
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        tools:context="me.gurpreetsk.rxoperators.ui.filtering.FilteringOperatorsActivity">
+
+        <Button
+            android:id="@+id/buttonDistinct"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/margin_16dp"
+            android:layout_marginRight="@dimen/margin_16dp"
+            android:layout_marginTop="@dimen/margin_4dp"
+            android:text="@string/distinct_operator"/>
+
+        <Button
+            android:id="@+id/buttonDistinctUntilChanged"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/margin_16dp"
+            android:layout_marginRight="@dimen/margin_16dp"
+            android:layout_marginTop="@dimen/margin_4dp"
+            android:text="@string/distinct_until_changed_operator"/>
+
+        <Button
+            android:id="@+id/buttonDebounce"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/margin_16dp"
+            android:layout_marginRight="@dimen/margin_16dp"
+            android:layout_marginTop="@dimen/margin_4dp"
+            android:text="@string/debounce_operator"/>
+
+        <Button
+            android:id="@+id/buttonTakeUntil"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/margin_16dp"
+            android:layout_marginRight="@dimen/margin_16dp"
+            android:layout_marginTop="@dimen/margin_4dp"
+            android:text="@string/take_until_operator"/>
+
+        <Button
+            android:id="@+id/buttonThrottle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/margin_16dp"
+            android:layout_marginRight="@dimen/margin_16dp"
+            android:layout_marginTop="@dimen/margin_4dp"
+            android:text="@string/throttle_operator"/>
+
+        <Button
+            android:id="@+id/buttonFilter"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/margin_16dp"
+            android:layout_marginRight="@dimen/margin_16dp"
+            android:layout_marginTop="@dimen/margin_4dp"
+            android:text="@string/filter_operator"/>
+
+        <Button
+            android:id="@+id/buttonFirst"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/margin_16dp"
+            android:layout_marginRight="@dimen/margin_16dp"
+            android:layout_marginTop="@dimen/margin_4dp"
+            android:text="@string/first_operator"/>
+
+    </LinearLayout>
+</ScrollView>
